gif gap fix attempt

--- a/rocketstyles.css
+++ b/rocketstyles.css
@@ -326,7 +326,7 @@ a:hover {
     top:-5vw;
     left:-5vw;
     width:110vw;
-    height:110vh;
+    height:120vh;
     background-color: #333;
 }
 
